# opencvgarbage

./: README.md  derleme.sh
FaceRecognition/: .gitignore  CMakeLists.txt  FaceDetector
FaceRecognition/src/: FaceDetector.cpp  main.cpp
SimpleCamera/: .gitignore  CMakeLists.txt
SimpleCamera/src/: main.cpp
